Header section don

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-   
+
+   <!-- ------------------ START HEADER PART ----------------- -->
+   <header>
+      <div class="content">
+         <h1>Let's Give Some Help To Those Who Are In Trouble Now</h1>
+         <p>Being human, we stand by people, help them and alleviate their misery. Make this world more beautiful.</p>
+         <button>Donate Now</button>
+      </div>
+   </header>
+   <!-- ------------------ END HEADER PART ----------------- -->
+
 
 </body>
 
