--- a/index.html
+++ b/index.html
@@ -21,6 +21,40 @@
    </header>
    <!-- ------------------ END HEADER PART ----------------- -->
 
+   <!-- ------------------ START DONATION AMOUNT PART ----------------- -->
+   <section id="donate_today">
+      <div class="container">
+         <div class="today">
+            <h2>Donate Today</h2>
+            <p>Global Giving seeks to raise funds faster than ever before in reliable, locally managed disaster relief
+               and recovery efforts around the world</p>
+         </div>
+
+         <div class="donation">
+            <div class="amount">
+               <h3>100tk</h3>
+            </div>
+            <div class="amount">
+               <h3>200tk</h3>
+            </div>
+            <div class="amount">
+               <h3>500tk</h3>
+            </div>
+            <div class="amount">
+               <h3>1000tk</h3>
+            </div>
+            <div class="amount">
+               <h3>5000tk</h3>
+            </div>
+         </div>
+
+         <div class="donation-field">
+            <input type="number" placeholder="Other Amount (TK)">
+            <button class="donate-btn">Donate Now</button>
+         </div>
+      </div>
+   </section>
+   <!-- ------------------ END DONATION AMOUNT PART ----------------- -->
 
 </body>
 
