Footer section don

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
       </div>
    </section>
    <!-- ------------------ END DONATION AMOUNT PART ----------------- -->
+   <!-- ------------------ START FOOTER AMOUNT PART ----------------- -->
+   <footer>
+      <div class="mid-container">
+         <h3>Be <span>Humble</span> </h3>
+         <p>&copy; 2022 Global Giving Society</p>
+      </div>
+   </footer>
+   <!-- ------------------ END FOOTER AMOUNT PART ----------------- -->
+
 
 </body>
 
