Our Donation Plan don

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <div class="today">
             <h2>Donate Today</h2>
             <p>Global Giving seeks to raise funds faster than ever before in reliable, locally managed disaster relief
-               and recovery efforts around the world</p>
+               and recovery efforts around the world.</p>
          </div>
 
          <div class="donation">
@@ -55,6 +55,39 @@
       </div>
    </section>
    <!-- ------------------ END DONATION AMOUNT PART ----------------- -->
+   <!-- ------------------ START DONATION PLAN PART ----------------- -->
+   <section id="donat-plan">
+      <div class="container">
+         <div class="today">
+            <h2>Our Donation Plan</h2>
+            <p>Global Giving operates in more than 75 countries around the world. We want to end hunger, donate blood,
+               provide safe housing and much more.</p>
+         </div>
+
+         <div class="donation-plan">
+            <div class="food donat-box">
+               <a href="#"><img src="assets/images/icon/food.png" alt="food donation image" srcset=""></a>
+               <h3>Food for a family</h3>
+               <p>We want to stand by every hungry person and try to quench their hunger, arrange for proper training to
+                  alleviate their hunger, so that they can return to normal life.</p>
+            </div>
+            <div class="blood donat-box">
+               <a href="#"><img src="assets/images/icon/blood.svg" alt="food donation image" srcset=""></a>
+               <h3>Donate blood saves lives</h3>
+               <p>Giving blood is a simple thing to do, but it can make a big difference in the lives of others. Make a
+                  life-saving blood donation appointment or request for Blood.</p>
+            </div>
+            <div class="shelter donat-box">
+               <a href="#"><img src="assets/images/icon/shelter.png" alt="food donation image" srcset=""></a>
+               <h3>Shelter for a family</h3>
+               <p>We want to stand by every homeless person and try to make them stay safe, provide them with
+                  appropriate training to alleviate their famine, so that they can lead a normal life.</p>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <!-- ------------------ END DONATION PLAN PART ----------------- -->
    <!-- ------------------ START FOOTER AMOUNT PART ----------------- -->
    <footer>
       <div class="mid-container">
