extra image delete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="amount">
                <h3>100tk</h3>
             </div>
-            <div class="amount">
+            <div class="amount donat-amount2">
                <h3>200tk</h3>
             </div>
             <div class="amount">
