update section don

--- a/index.html
+++ b/index.html
@@ -88,6 +88,39 @@
    </section>
 
    <!-- ------------------ END DONATION PLAN PART ----------------- -->
+   <!-- ------------------ START UPDATE PLAN PART ----------------- -->
+   <section id="update">
+      <div class="container">
+         <div class="today">
+            <h2>Get My Updates</h2>
+            <p>Stay with us at all times to get in touch with us and to give us any donations or to get updates on
+               donations.</p>
+         </div>
+         <div class="update-mail-box">
+            <div class="content-update">
+               <input class="subscribe-input" type="email" placeholder="Your Email">
+
+               <a class="subscribe">Subscribe</a>
+            </div>
+
+         </div>
+      </div>
+   </section>
+
+   <!-- ------------------ END UPDATE PLAN PART ----------------- -->
+
+
+
+
+
+
+
+
+
+
+
+
+
    <!-- ------------------ START FOOTER AMOUNT PART ----------------- -->
    <footer>
       <div class="mid-container">
