--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div class="container">
          <div class="today">
             <h2>Donate Today</h2>
+            <hr>
             <p>Global Giving seeks to raise funds faster than ever before in reliable, locally managed disaster relief
                and recovery efforts around the world.</p>
          </div>
@@ -60,6 +61,7 @@
       <div class="container">
          <div class="today">
             <h2>Our Donation Plan</h2>
+            <hr>
             <p>Global Giving operates in more than 75 countries around the world. We want to end hunger, donate blood,
                provide safe housing and much more.</p>
          </div>
@@ -88,11 +90,61 @@
    </section>
 
    <!-- ------------------ END DONATION PLAN PART ----------------- -->
+   <!-- ------------------ START DISASTER RECOVERY PART ----------------- -->
+   <section id="recovery">
+      <div class="container">
+         <div class="disaster-recovery">
+            <div class="disater">
+               <h2>Disaster Recovery</h2>
+               <hr>
+               <p>Global Giving makes it easy to donate to reliable, locally-led disaster relief and recovery efforts
+                  around the world.</p>
+               <button>Learn More</button>
+            </div>
+            <div class="disater-map">
+               <img src="assets/images/banner/7.png" alt="Disaster recovery map image" srcset="">
+            </div>
+         </div>
+      </div>
+   </section>
+
+
+
+   <!-- ------------------ END DISASTER RECOVERY PART ----------------- -->
+   <!-- ------------------ START DONATION MESSAGES PART ----------------- -->
+   <section id="messages">
+      <div class="container">
+         <div class="disaster-message">
+            <div class="message-vedio">
+
+               <iframe width="660" height="315" src="https://www.youtube.com/embed/mbk2EWF71Ko"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+
+            </div>
+            <div class="message-box">
+               <h2>Message from Global Donation Society</h2>
+               <hr>
+               <p>
+                  "We are working in solidarity with the government to stand by the flood victims in Sylhet and
+                  Sunamganj. Global giving Society.</p>
+            </div>
+
+         </div>
+      </div>
+   </section>
+
+
+
+   <!-- ------------------ END DONATION MESSAGES PART ----------------- -->
+
    <!-- ------------------ START UPDATE PLAN PART ----------------- -->
    <section id="update">
       <div class="container">
          <div class="today">
             <h2>Get My Updates</h2>
+            <hr>
             <p>Stay with us at all times to get in touch with us and to give us any donations or to get updates on
                donations.</p>
          </div>
