Poroject all most don

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="shortcut icon" href="assets/images/banner/8.png" type="image/x-icon">
    <title>Global Giving</title>
    <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -94,7 +95,7 @@
    <section id="recovery">
       <div class="container">
          <div class="disaster-recovery">
-            <div class="disater">
+            <div class="disater-content">
                <h2>Disaster Recovery</h2>
                <hr>
                <p>Global Giving makes it easy to donate to reliable, locally-led disaster relief and recovery efforts
@@ -123,7 +124,7 @@
                   allowfullscreen></iframe>
 
             </div>
-            <div class="message-box">
+            <div class="message-box-content">
                <h2>Message from Global Donation Society</h2>
                <hr>
                <p>
@@ -150,9 +151,10 @@
          </div>
          <div class="update-mail-box">
             <div class="content-update">
-               <input class="subscribe-input" type="email" placeholder="Your Email">
-
-               <a class="subscribe">Subscribe</a>
+               <form action="">
+                  <input class="subscribe-input" type="email" placeholder="Your Email">
+                  <a class="subscribe">Subscribe</a>
+               </form>
             </div>
 
          </div>
@@ -160,17 +162,6 @@
    </section>
 
    <!-- ------------------ END UPDATE PLAN PART ----------------- -->
-
-
-
-
-
-
-
-
-
-
-
 
 
    <!-- ------------------ START FOOTER AMOUNT PART ----------------- -->
